# Disconnect

./: .gitignore  CMakeLists.txt  GameView.cpp  README.md  disconnect.qrc  emscripten.cmake  gameboard_init.hpp  initialize_gameboard.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
controller/: GameController.cpp
game/: Game.cpp  GameBoardUnitTest.cpp  game.cpp  game.hpp
generator/: MoveGenerator.cpp
include/: Game.hpp  GameController.hpp  GameView.hpp  MoveGenerator.hpp
ui/: mainwindow.cpp
